--- a/prototype/timeseries_prototype/index.html
+++ b/prototype/timeseries_prototype/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <title>Chart.js example</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="shortcut icon" href="#">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -13,13 +14,12 @@
   <div id="countries"></div>
 
   <!-- <script type="module" src="dimensions.js"></script> -->
-  <script type="module" src="acquisitions.js"></script>
-  <script type="module" src="countries.js"></script>
+  <script type="module" src="scripts/countries.js"></script>
 
-<div class="form-popup" id="myForm">
-  <form action="/get_data.php" class="form-container">
+<div id="form_box">
+  <form id="form" action="">
     <!-- <input list="indicators"> -->
-    <select id="indicators" name="indicators" multiple>
+    <select id="indicators" name="indicators" multiple required>
       <optgroup label="Demographics">
         <option value="popc">Population Count</option>
         <option value="popd">Population Density</option>
@@ -46,7 +46,7 @@
     </select>
     <p>Hold down the Ctrl (windows) or Command (Mac) button to select multiple options.</p>
     <!-- <input list="start_year"> -->
-    <select id="start_year" class="select_year">
+    <select id="start_year" name="start_year" class="select_year" required>
       <option value="bce_10000">-10000</option>
       <option value="bce_9000">-9000</option>
       <option value="bce_8000">-8000</option>
@@ -123,7 +123,7 @@
       <option value="ce_2016">2016</option>
       <!-- <option value="ce_2017">2017</option> -->
     </select> 
-    <select id="end_year" class="select_year">
+    <select id="end_year" name="end_year" class="select_year" required>
       <option value="bce_10000">-10000</option>
       <option value="bce_9000">-9000</option>
       <option value="bce_8000">-8000</option>
@@ -208,9 +208,15 @@
     <input type="text" id="fname" name="fname"><br>
     <label for="lname">Last name:</label><br>
     <input type="text" id="lname" name="lname"> -->
-  </form> 
-  <button type="submit" class="btn">Request Table</button>
+    <button type="submit" class="btn">Request Table</button>
+  </form>   
 </div>
+
+<!-- <script>
+  fetch('/timeseries.txt').then(response => {
+    console.log(response.text())
+  });
+</script> -->
 
 </body>
 
