--- a/prototype/timeseries-website/index.html
+++ b/prototype/timeseries-website/index.html
@@ -5,218 +5,52 @@
   <title>Chart.js example</title>
   <link rel="shortcut icon" href="#">
   <link rel="stylesheet" href="styles/style.css">
+  <script src="main.js" type="module"></script>
 </head>
 
 <body>
-  <h1>Trying to plot timeseries, with php connection and Chart</h1>
-  <!-- <div style="width: 500px;"><canvas id="dimensions"></canvas></div><br/> -->
-  <!-- <div style="width: 800px;"><canvas id="acquisitions"></canvas></div> -->
+  <h1>Trying to plot timeseries, with using the flask API and Chart</h1>
+
   <div id="countries"></div>
 
-  <!-- <script type="module" src="dimensions.js"></script> -->
-  <script type="module" src="scripts/countries.js"></script>
-
-<div id="form_box">
-  <form id="form" action="">
-    <!-- <input list="indicators"> -->
-    <select id="indicators" name="indicators" multiple required>
-      <optgroup label="Demographics">
-        <option value="popc">Population Count</option>
-        <option value="popd">Population Density</option>
-        <option value="urbc">Urban Population</option>
-        <option value="rurc">Rural Population</option>
-      </optgroup>
-      <optgroup label="Land Use">
-        <option value="uopp">Build Area</option>
-        <option value="cropland">Cropland</option>
-        <option value="grazing">Grazing</option>
-        <option value="pasture">Pasture</option>
-        <option value="rangeland">rangeland</option>
-        <option value="conv_rangeland">Conventional Rangeland</option>
-      </optgroup>
-      <optgroup label="Agricultural">
-        <option value="ir_rice">Irrigated Rice</option>
-        <option value="rf_rice">Rainfed Rice</option>
-        <option value="tot_rice">Total Rice</option>
-        <option value="ir_norice">Irrigated Other</option>
-        <option value="rf_norice">Rainfed Other</option>
-        <option value="tot_ir">Total Irrigated</option>
-        <option value="tot_rf">Total Raifed</option>
-      </optgroup>
-    </select>
-    <p>Hold down the Ctrl (windows) or Command (Mac) button to select multiple options.</p>
-    <!-- <input list="start_year"> -->
-    <select id="start_year" name="start_year" class="select_year" required>
-      <option value="bce_10000">-10000</option>
-      <option value="bce_9000">-9000</option>
-      <option value="bce_8000">-8000</option>
-      <option value="bce_7000">-7000</option>
-      <option value="bce_6000">-6000</option>
-      <option value="bce_5000">-5000</option>
-      <option value="bce_4000">-4000</option>
-      <option value="bce_3000">-3000</option>
-      <option value="bce_2000">-2000</option>
-      <option value="bce_1000">-1000</option>
-      <option value="ce_0">0</option>
-      <option value="ce_100">100</option>
-      <option value="ce_200">200</option>
-      <option value="ce_300">300</option>
-      <option value="ce_400">400</option>
-      <option value="ce_500">500</option>
-      <option value="ce_600">600</option>
-      <option value="ce_700">700</option>
-      <option value="ce_800">800</option>
-      <option value="ce_900">900</option>
-      <option value="ce_1000">1000</option>
-      <option value="ce_1100">1100</option>
-      <option value="ce_1200">1200</option>
-      <option value="ce_1300">1300</option>
-      <option value="ce_1400">1400</option>
-      <option value="ce_1500">1500</option>
-      <option value="ce_1600">1600</option>
-      <option value="ce_1700">1700</option>
-      <option value="ce_1710">1710</option>
-      <option value="ce_1720">1720</option>
-      <option value="ce_1730">1730</option>
-      <option value="ce_1740">1740</option>
-      <option value="ce_1750">1750</option>
-      <option value="ce_1760">1760</option>
-      <option value="ce_1770">1770</option>
-      <option value="ce_1780">1780</option>
-      <option value="ce_1790">1790</option>
-      <option value="ce_1800">1800</option>
-      <option value="ce_1810">1810</option>
-      <option value="ce_1820">1820</option>
-      <option value="ce_1830">1830</option>
-      <option value="ce_1840">1840</option>
-      <option value="ce_1850">1850</option>
-      <option value="ce_1860">1860</option>
-      <option value="ce_1870">1870</option>
-      <option value="ce_1880">1880</option>
-      <option value="ce_1890">1890</option>
-      <option value="ce_1900">1900</option>
-      <option value="ce_1910">1910</option>
-      <option value="ce_1920">1920</option>
-      <option value="ce_1930">1930</option>
-      <option value="ce_1940">1940</option>
-      <option value="ce_1950">1950</option>
-      <option value="ce_1960">1960</option>
-      <option value="ce_1970">1970</option>
-      <option value="ce_1980">1980</option>
-      <option value="ce_1990">1990</option>
-      <option value="ce_2000">2000</option>
-      <option value="ce_2001">2001</option>
-      <option value="ce_2002">2002</option>
-      <option value="ce_2003">2003</option>
-      <option value="ce_2004">2004</option>
-      <option value="ce_2005">2005</option>
-      <option value="ce_2006">2006</option>
-      <option value="ce_2007">2007</option>
-      <option value="ce_2008">2008</option>
-      <option value="ce_2009">2009</option>
-      <option value="ce_2010">2010</option>
-      <option value="ce_2011">2011</option>
-      <option value="ce_2012">2012</option>
-      <option value="ce_2013">2013</option>
-      <option value="ce_2014">2014</option>
-      <option value="ce_2015">2015</option>
-      <option value="ce_2016">2016</option>
-      <!-- <option value="ce_2017">2017</option> -->
-    </select> 
-    <select id="end_year" name="end_year" class="select_year" required>
-      <option value="bce_10000">-10000</option>
-      <option value="bce_9000">-9000</option>
-      <option value="bce_8000">-8000</option>
-      <option value="bce_7000">-7000</option>
-      <option value="bce_6000">-6000</option>
-      <option value="bce_5000">-5000</option>
-      <option value="bce_4000">-4000</option>
-      <option value="bce_3000">-3000</option>
-      <option value="bce_2000">-2000</option>
-      <option value="bce_1000">-1000</option>
-      <option value="ce_0">0</option>
-      <option value="ce_100">100</option>
-      <option value="ce_200">200</option>
-      <option value="ce_300">300</option>
-      <option value="ce_400">400</option>
-      <option value="ce_500">500</option>
-      <option value="ce_600">600</option>
-      <option value="ce_700">700</option>
-      <option value="ce_800">800</option>
-      <option value="ce_900">900</option>
-      <option value="ce_1000">1000</option>
-      <option value="ce_1100">1100</option>
-      <option value="ce_1200">1200</option>
-      <option value="ce_1300">1300</option>
-      <option value="ce_1400">1400</option>
-      <option value="ce_1500">1500</option>
-      <option value="ce_1600">1600</option>
-      <option value="ce_1700">1700</option>
-      <option value="ce_1710">1710</option>
-      <option value="ce_1720">1720</option>
-      <option value="ce_1730">1730</option>
-      <option value="ce_1740">1740</option>
-      <option value="ce_1750">1750</option>
-      <option value="ce_1760">1760</option>
-      <option value="ce_1770">1770</option>
-      <option value="ce_1780">1780</option>
-      <option value="ce_1790">1790</option>
-      <option value="ce_1800">1800</option>
-      <option value="ce_1810">1810</option>
-      <option value="ce_1820">1820</option>
-      <option value="ce_1830">1830</option>
-      <option value="ce_1840">1840</option>
-      <option value="ce_1850">1850</option>
-      <option value="ce_1860">1860</option>
-      <option value="ce_1870">1870</option>
-      <option value="ce_1880">1880</option>
-      <option value="ce_1890">1890</option>
-      <option value="ce_1900">1900</option>
-      <option value="ce_1910">1910</option>
-      <option value="ce_1920">1920</option>
-      <option value="ce_1930">1930</option>
-      <option value="ce_1940">1940</option>
-      <option value="ce_1950">1950</option>
-      <option value="ce_1960">1960</option>
-      <option value="ce_1970">1970</option>
-      <option value="ce_1980">1980</option>
-      <option value="ce_1990">1990</option>
-      <option value="ce_2000">2000</option>
-      <option value="ce_2001">2001</option>
-      <option value="ce_2002">2002</option>
-      <option value="ce_2003">2003</option>
-      <option value="ce_2004">2004</option>
-      <option value="ce_2005">2005</option>
-      <option value="ce_2006">2006</option>
-      <option value="ce_2007">2007</option>
-      <option value="ce_2008">2008</option>
-      <option value="ce_2009">2009</option>
-      <option value="ce_2010">2010</option>
-      <option value="ce_2011">2011</option>
-      <option value="ce_2012">2012</option>
-      <option value="ce_2013">2013</option>
-      <option value="ce_2014">2014</option>
-      <option value="ce_2015">2015</option>
-      <option value="ce_2016">2016</option>
-      <option value="ce_2017">2017</option>
-    </select> 
+  <div style="width: 800px;"><canvas id="chart1"></canvas></div>
     
-
-    <!-- </datalist>
-    <input type="text">
-    <label for="fname">First name:</label><br>
-    <input type="text" id="fname" name="fname"><br>
-    <label for="lname">Last name:</label><br>
-    <input type="text" id="lname" name="lname"> -->
-    <button type="submit" class="btn">Request Table</button>
-  </form>   
-</div>
-
-<!-- <script>
-  fetch('/timeseries.txt').then(response => {
-    console.log(response.text())
-  });
-</script> -->
+  <div id="form_box">
+    <form id="form">
+      <!-- <input list="indicators"> -->
+      <select id="indicators" name="indicators" multiple required>
+        <optgroup label="Demographics">
+          <option value="popc">Population Count</option>
+          <option value="popd">Population Density</option>
+          <option value="urbc">Urban Population</option>
+          <option value="rurc">Rural Population</option>
+        </optgroup>
+        <optgroup label="Land Use">
+          <option value="uopp">Build Area</option>
+          <option value="cropland">Cropland</option>
+          <option value="grazing">Grazing</option>
+          <option value="pasture">Pasture</option>
+          <option value="rangeland">rangeland</option>
+          <option value="conv_rangeland">Conventional Rangeland</option>
+        </optgroup>
+        <optgroup label="Agricultural">
+          <option value="ir_rice">Irrigated Rice</option>
+          <option value="rf_rice">Rainfed Rice</option>
+          <option value="tot_rice">Total Rice</option>
+          <option value="ir_norice">Irrigated Other</option>
+          <option value="rf_norice">Rainfed Other</option>
+          <option value="tot_ir">Total Irrigated</option>
+          <option value="tot_rf">Total Raifed</option>
+        </optgroup>
+      </select>
+      <p>Hold down the Ctrl (windows) or Command (Mac) button to select multiple options.</p>
+      <!-- <input list="start_year"> -->
+      <select id="start_year" name="start_year" class="select_year" required></select> 
+      <select id="end_year" name="end_year" class="select_year" required></select> 
+      
+      <button type="submit" class="btn">Request Table</button>
+    </form>   
+  </div>
 
 </body>
 
