ncWMS2 functions from tomcat. Capable to change layers dynamically

--- a/prototype/ncWMS/test-website/index.html
+++ b/prototype/ncWMS/test-website/index.html
@@ -11,11 +11,10 @@
     <div id="map"></div>
 
     <div id="top-right">
-        Change Layers
-        <label class="switch">
-            <input type="checkbox">
-            <span class="slider round"></span>
-        </label>
+        <input type="radio" name="layer" id="irrigated_rice" value="2/irrigated_rice">
+        <label for="irrigated_rice">Irrigated Rice</label><br>
+        <input type="radio" name="layer" id="irrigated_not_rice" value="1/irrigated_not_rice">
+        <label for="irrigated_not_rice">Other Irrigated</label><br>
     </div>
 </body>
 </html>
