--- a/prototype/website/index.html
+++ b/prototype/website/index.html
@@ -4,77 +4,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Map Website</title>
-    <script src="src/index.js" type="module"></script>
-    <link rel="stylesheet" href="src/styles/styles.css">
+    <title>Timeseries Website</title> 
+    <script src="src/index.js" type="module"></script>   <!-- Needs to be imported as a module -->
+    <link rel="stylesheet" href="src/styles/styles.css">   <!-- Import stylesheet -->
 </head>
 
 <body>
-    <!-- This is the div where the map is displayed -->
-    <div id="map"></div>
+    <div id="map"></div>   <!-- Div where map is displayed using Openlayers --> 
 
-    <!-- Elements on the right, ammount and which countries are selected, and form form plotting -->
-    <div class="left-elements">
-        <div id="status">
-            <ul id="country-list">
-            </ul>
-        </div>
-
-        <div id="timeseries-form-box">
-            <form id="timeseries-form">
-                <!-- <input list="indicators"> -->
-                <select id="indicators" name="indicators" multiple required>
-                    <optgroup label="Demographics">
-                        <option value="popc">Population Count</option>
-                        <option value="popd">Population Density</option>
-                        <option value="urbc">Urban Population</option>
-                        <option value="rurc">Rural Population</option>
-                    </optgroup>
-                    <optgroup label="Land Use">
-                        <option value="uopp">Build Area</option>
-                        <option value="cropland">Cropland</option>
-                        <option value="grazing">Grazing</option>
-                        <option value="pasture">Pasture</option>
-                        <option value="rangeland">rangeland</option>
-                        <option value="conv_rangeland">Conventional Rangeland</option>
-                    </optgroup>
-                    <optgroup label="Agricultural">
-                        <option value="ir_rice">Irrigated Rice</option>
-                        <option value="rf_rice">Rainfed Rice</option>
-                        <option value="tot_rice">Total Rice</option>
-                        <option value="ir_norice">Irrigated Other</option>
-                        <option value="rf_norice">Rainfed Other</option>
-                        <option value="tot_ir">Total Irrigated</option>
-                        <option value="tot_rf">Total Raifed</option>
-                    </optgroup>
-                </select>
-                <p>Hold down the Ctrl (windows) or <br> Command (Mac) button to select multiple indicators.</p>
-                <!-- <input list="start_year"> -->
-                <select id="start_year" name="start_year" class="select_year" required></select>
-                <select id="end_year" name="end_year" class="select_year" required></select>
-
-                <button id="timeseries-button" type="submit" class="btn">Request Figures</button>
-            </form>
-        </div>
-    </div>
-
-    <div><button id="plotting">Plot Timeseries</button></div>
-
-    <!-- Location where the graphs are displayed, with clickable buttons to switch to next-->
-    <div id="canvas-container">
-        <button class="arrow" id="arrow-left">&#8249;</button>
-            <div id="chart-container">
-                <div id="chart-title">Chart 0</div> 
-                <div id="chart-box"><canvas id="chart"></canvas></div>
+    <div id="not-map">  
+        <div id="left-elements">   
+            <div id="amt-selected"> 
+                <ul id="country-list"></ul>
             </div>
-        <button class="arrow" id="arrow-right">&#8250;</button>
+
+            <button id="plot-button">Plot Timeseries</button>
+
+            <div id="timeseries-form-box">
+                <form id="timeseries-form">
+                    <select id="indicators" name="indicators" multiple required>
+                        <optgroup id="dem-indicators" label="Demographics">
+                            <!-- <option value="popc">Population Count</option>
+                            <option value="popd">Population Density</option>
+                            <option value="urbc">Urban Population</option>
+                            <option value="rurc">Rural Population</option> -->
+                        </optgroup>
+                        <optgroup id="lu-indicators" label="Land Use">
+                            <!-- <option value="uopp">Build Area</option>
+                            <option value="cropland">Cropland</option>
+                            <option value="grazing">Grazing</option>
+                            <option value="pasture">Pasture</option>
+                            <option value="rangeland">Rangeland</option>
+                            <option value="conv_rangeland">Conventional Rangeland</option> -->
+                        </optgroup>
+                        <optgroup id="agr-indicators" label="Agricultural">
+                            <!-- <option value="ir_rice">Irrigated Rice</option>
+                            <option value="rf_rice">Rainfed Rice</option>
+                            <option value="tot_rice">Total Rice</option>
+                            <option value="ir_norice">Irrigated Other</option>
+                            <option value="rf_norice">Rainfed Other</option>
+                            <option value="tot_ir">Total Irrigated</option>
+                            <option value="tot_rf">Total Raifed</option> -->
+                        </optgroup>
+                    </select>
+                    <p>Hold down the Ctrl (windows) or <br> Command (Mac) button to select multiple indicators.</p>
+                    <!-- <input list="start_year"> -->
+                    <select id="start_year" name="start_year" class="select_year" required></select>
+                    <select id="end_year" name="end_year" class="select_year" required></select>
+
+                    <button id="timeseries-button" type="submit" class="btn">Request Figures</button>
+                </form>
+            </div>
+        </div>
+
+        <!-- Location where the graphs are displayed, with clickable buttons to switch to next-->
+        <div id="middle-elements">   <!-- All elements placed in the middle -->
+            <button class="arrow" id="arrow-left">&#8249;</button>
+                <div id="chart-container">
+                    <div id="chart-title">Chart 0</div> 
+                    <div id="chart-box"><canvas id="chart"></canvas></div>
+                </div>
+            <button class="arrow" id="arrow-right">&#8250;</button>
+        </div>
+
+        <div id="nb-charts" style="display: none;"></div>
+        <div id="invisible-chart-box" style="display: none"></div>
+
+        <!-- Here all functionality should come to overlay the pixel rasters -->
+        <div class="right-elements"></div>   <!-- All elements placed on the right -->
     </div>
-
-    <div id="nb-charts" style="display: none;"></div>
-    <div id="invisible-chart-box" style="display: none"></div>
-
-    <!-- Here all functionality should come to overlay the pixel rasters -->
-    <div class="right-elements"></div>
 
 </body>
 
