--- a/prototype/ncWMS/test-website/index.html
+++ b/prototype/ncWMS/test-website/index.html
@@ -6,6 +6,9 @@
     <title>Serving Layers</title>
     <link rel="stylesheet" href="styles.css">
     <script type="module" src="index.js"></script>
+    <!-- To use toggle -->
+    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 </head>
 <body>
     <div id="map"></div>
@@ -19,7 +22,7 @@
     </div>
 
     <div id="top-right">
-        <input type="radio" name="layer" id="irrigated_rice" value="2/irrigated_rice">
+        <input type="checkbox" name="layer" id="irrigated_rice" value="2/irrigated_rice">
         <label for="irrigated_rice">Irrigated Rice</label><br>
         <input type="radio" name="layer" id="irrigated_not_rice" value="1/irrigated_not_rice">
         <label for="irrigated_not_rice">Other Irrigated</label><br>
