--- a/prototype/timeseries-website/index.html
+++ b/prototype/timeseries-website/index.html
@@ -21,7 +21,7 @@
         <div>
             <p id="amt-selected">0 countries selected</p> <!-- Is dynamically updated within allow-selection -->
             <ul id="country-list"></ul> <!-- Same as above -->
-            <button id="plot-button">Plot Timeseries</button>
+            <button id="form-button">Plot Timeseries</button>
         </div>
     </div>
 
@@ -33,27 +33,30 @@
                 <optgroup id="agr-indicators" label="Agricultural"></optgroup>
             </select>
             <p>Hold down the Ctrl (windows) or <br> Command (Mac) button to select multiple indicators.</p>
-            <select id="start_year" name="start_year" class="select_year" required></select>
-            <!-- Dynamically filled in by write_html.js -->
-            <select id="end_year" name="end_year" class="select_year" required></select> <!-- Same as above -->
+
+            <label for="start-year">Select start year: </label>
+            <select id="start-year" name="start-year" class="select-year" required></select> <!-- Dynamically filled in by write_html.js -->
+            <br>
+            <label for="start-year">Select end year: </label>
+            <select id="end-year" name="end-year" class="select-year" required></select> <!-- Same as above -->
+            <br>
             <button id="timeseries-button" type="submit" class="btn">Request Figures</button>
             <!-- Make API call based on form datat -->
         </form>
         <div id="plotting options">
             <label>
-                <input type="checkbox" data-on="Relative" data-off="Absolute">
-                Change scale type
+                <input type="checkbox" id="x-axis">
+                <span id="relative">Relative</span>/<span id="absolute">Absolute</span> scale
             </label>
             <br>
             <label>
-                <input type="checkbox" data-on="Combined" data-off="Seperate">
-                Seperate or single figure
+                <input type="checkbox" id="combine">
+                <span id="seperate">Seperate</span>/<span id="combined">Combined</span> figure
             </label>
         </div>
     </div>
-    </div>
 
-    <div class="positioning" id="middle-elements"> <!-- All elements placed in the middle = graph -->
+    <div class="positioning" id="plot-container"> <!-- All elements placed in the middle = graph -->
         <button class="arrow" id="arrow-left">&#8249;</button> <!-- Buttons allow switching between graphs -->
         <div id="chart-container">
             <div id="chart-title">Chart 0</div>
@@ -65,7 +68,9 @@
     <!-- Here all functionality should come to overlay the pixel rasters -->
     <div class="positioning" id="right-elements"> <!-- All elements placed on the right -->
         <div id="attribution">
-            <p>Powered by <a href="https://www.esri.com/en-us/home">Esri</a></p>
+            <p>Tiles © <a
+                    href="https://services.arcgisonline.com/ArcGIS/rest/services/World_Topo_Map/MapServer">ArcGIS</a>
+            </p>
         </div>
     </div>
     </div>
