timeseries-website added combined/seperate figures button, updated readme

--- a/prototype/timeseries-website/index.html
+++ b/prototype/timeseries-website/index.html
@@ -78,6 +78,8 @@
 
     <div id="nb-charts" style="display: none;"></div>
     <!-- Invisible place where the total ammout of graphs are temporary stored -->
+    <div id="chart-number" style="display: none;">0</div>
+    <!-- Invisible place where the current graph number are temporary stored -->
     <div id="invisible-chart-box" style="display: none"></div>
     <!-- Invisible place where not displayed graphs are stored -->
 
