dockerize the ncWMS backend

--- a/prototype/ncWMS/test-website/index.html
+++ b/prototype/ncWMS/test-website/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <div id="top-right">
-        <input type="checkbox" name="layer" id="irrigated_rice" value="2/irrigated_rice">
+        <input type="radio" name="layer" id="irrigated_rice" value="2/irrigated_rice">
         <label for="irrigated_rice">Irrigated Rice</label><br>
         <input type="radio" name="layer" id="irrigated_not_rice" value="1/irrigated_not_rice">
         <label for="irrigated_not_rice">Other Irrigated</label><br>
