First react commit. AKA "handdoek in de ring"

--- a/prototype/timeseries-website/index.html
+++ b/prototype/timeseries-website/index.html
@@ -35,7 +35,8 @@
             <p>Hold down the Ctrl (windows) or <br> Command (Mac) button to select multiple indicators.</p>
 
             <label for="start-year">Select start year: </label>
-            <select id="start-year" name="start-year" class="select-year" required></select> <!-- Dynamically filled in by write_html.js -->
+            <select id="start-year" name="start-year" class="select-year" required></select>
+            <!-- Dynamically filled in by write_html.js -->
             <br>
             <label for="start-year">Select end year: </label>
             <select id="end-year" name="end-year" class="select-year" required></select> <!-- Same as above -->
@@ -72,7 +73,6 @@
                     href="https://services.arcgisonline.com/ArcGIS/rest/services/World_Topo_Map/MapServer">ArcGIS</a>
             </p>
         </div>
-    </div>
     </div>
 
 
