--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,9 @@
   <link rel="icon" href="./favicon.ico?v=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
   <meta name="description" content="Web site created using create-react-app" />
   <title>Hyde Portal</title>
 </head>
