--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,6 +2,17 @@
 <html lang="en">
 
 <head>
+
+  <!-- Google Analytica tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SNZ3729HW2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-SNZ3729HW2');
+  </script>
+
   <meta charset="utf-8" />
   <link rel="icon" href="./favicon.ico?v=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
