--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6GRT1DF10Q"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-6GRT1DF10Q');
+  </script>
+
   <meta charset="utf-8" />
   <link rel="icon" href="./favicon.ico?v=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -14,7 +24,7 @@
 </head>
 
 <body>
-  
+
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
